@@ -502,6 +502,7 @@ New features:
 A.F....... [ZBX-1357] updated German, Japanese, Italian, Romanian and Slovak translations; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
+........S. [ZBX-7151] limited alert message and items parameter length to 2048 characters when working with Oracle and DB2 databases (wiper)
 ........S. [ZBX-7133] fixed processing of zabbix[host,*,available] item; fixed proxy's hosts availability data on server (Sasha)
 ..F....... [ZBX-7112] improved file import validation for graph items (Eduard)
 A......... [ZBX-7101] fixed generated SQL queries in action.get method when simultaneously selecting more than one condition and operation (Ivo)
